--- a/index.html
+++ b/index.html
@@ -188,17 +188,14 @@
 
         renderCalendar();
     </script>
+    <div class="footer">
+    © 2025 potatohan™ — 馬鈴薯飯<br>
+    All Rights Reserved.<br>
+    Design by potatohan™<br>
+    Email: <a href="mailto:contact@potatohan.com">contact@potatohan.com</a>
+</div>
 </body>
-<div class="contact" style="text-align: center; margin-top: 50px;">
-        <h3>聯絡我們</h3>
-        <p>如有問題，請點擊下方按鈕寄信給我們：</p>
-        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=contact@potatohan.com&su=工作表回報&body=您好，請描述您遇到問題，我們會盡快回復您!"
-            target="_blank"
-            style="display:inline-block; padding:10px 20px; background:rgb(255, 255, 255); color:s#000000; text-decoration:none; border-radius:5px;">
-            ✉️ 寄信給我們
-        </a>
 
-    </div>
 </html>
 
 
