--- a/index.html
+++ b/index.html
@@ -188,12 +188,25 @@
 
         renderCalendar();
     </script>
-    <div class="footer">
+   <!-- 灰底 Footer -->
+<div style="
+    margin-top: 40px;
+    padding: 20px 10px;
+    background-color: #f2f2f2;
+    border-top: 1px solid #ddd;
+    font-size: 12px;
+    color: #555;
+    text-align: center;
+    line-height: 1.6;
+">
     © 2025 potatohan™ — 馬鈴薯飯<br>
     All Rights Reserved.<br>
     Design by potatohan™<br>
-    Email: <a href="mailto:contact@potatohan.com">contact@potatohan.com</a>
+    Email: <a href="mailto:contact@potatohan.com" style="color:#333; text-decoration:none;">
+        contact@potatohan.com
+    </a>
 </div>
+
 </body>
 
 </html>
